# megapy

./: .gitignore  README.md  TODO  claude.py  pyproject.toml  requirements.txt
docs/: api_batching.md  file_versioning.md  folder_import_api.md  modification_time.md  shared_keys_and_node_encryption.md  upload_performance.md  video_attributes.md
examples/: 01_basic.py  02_filesystem.py  03_upload.py  04_download.py  05_media_info.py  06_file_operations.py  07_sessions.py  08_advanced.py  09_thumbnails.py  10_file_versioning.py  README.md
megapy/: __init__.py  __main__.py  client.py  node.py  nodes.py
megapy/cli/: __init__.py  grid.py  main.py
megapy/core/: __init__.py  attributes.py  exceptions.py  file.py  folder.py  logging.py  mutable_file.py  path.py  utils.py
megapy/helpers/: hashcash.js  hashcash_runner.js
tests/: __init__.py  conftest.py  debug_upload_speed.py  test_bottleneck.py  test_real_upload.py
tests/e2e/: __init__.py  test_custom_attributes.py  test_real_account.py  test_session_resume.py  test_simple_api.py  test_tree_navigation.py  test_upload_readme.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_crypto_aes.py  test_crypto_encoding.py  test_crypto_file.py  test_crypto_key_utils.py  test_key_file_manager_attributes.py  test_logging.py  test_media_attributes.py  test_media_processor.py  test_session.py  test_storage_attribute_service.py  test_storage_decryptors.py  test_storage_models.py  test_storage_node_processor.py  test_upload_chunking.py  test_upload_encryption.py  test_upload_file_attributes.py  test_upload_models.py  (+2 more)
(+108 files in other folders)
